--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-streamlit
-opencv-python
-numpy
-Pillow
-torch
-matplotlib
-tensorflow
-Pillow
-huggingface_hub
-opencv-python-headless
+streamlit==1.32.2
+opencv-python-headless==4.9.0.80  # Critical fix
+numpy==1.26.4
+Pillow==10.2.0
+torch==2.2.1
+matplotlib==3.8.3
+tensorflow==2.15.0
+huggingface_hub==0.21.4
