--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.32.2
-opencv-python-headless==4.9.0.80  # Critical fix
+opencv-python-headless==4.9.0.80
 numpy==1.26.4
 Pillow==10.2.0
-torch==2.2.1
+torch==2.2.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 matplotlib==3.8.3
 tensorflow==2.15.0
 huggingface_hub==0.21.4
