--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-# Core dependencies
-streamlit==1.32.2
+# Use this exact version
+streamlit==1.44.1  # Match installed version
 numpy==1.26.4
-opencv-python-headless==4.9.0.80  # GUI-free OpenCV
-Pillow==10.2.0                    # Image processing
-matplotlib==3.8.3                 # Visualization
-tqdm==4.66.2                      # Progress bars
-
-torch==2.2.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
-tensorflow==2.15.0                
-huggingface_hub==0.21.4 
+opencv-python-headless==4.9.0.80
+Pillow==10.2.0
+matplotlib==3.8.3
+tqdm==4.66.2
+torch==2.3.1 --index-url https://download.pytorch.org/whl/cpu
+tensorflow==2.16.1
+huggingface_hub==0.21.4
+scipy==1.12.0
+pyyaml==6.0.1
+markdown-it-py==3.0.0  # Explicit version
+rich==14.0.0
