--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-# Use this exact version
-streamlit==1.44.1  # Match installed version
-numpy==1.26.4
+# requirements.txt (updated order)
+numpy==1.26.4  # Must be first!
+streamlit==1.44.1
 opencv-python-headless==4.9.0.80
 Pillow==10.2.0
 matplotlib==3.8.3
@@ -10,5 +10,3 @@ tensorflow==2.16.1
 huggingface_hub==0.21.4
 scipy==1.12.0
 pyyaml==6.0.1
-markdown-it-py==3.0.0  # Explicit version
-rich==14.0.0
